<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SecondPage"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/purple_700"
        android:layout_marginBottom="670dp"
        android:text="@string/welcome_to_serene"
        android:fontFamily="sans-serif-black"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="17dp">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:background="@color/purple_700"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/talk"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/talk"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="sans-serif-black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:background="@color/purple_700">

        <ImageButton
            android:id="@+id/therepy"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/therepy"
            android:scaleType="centerCrop" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/therepy"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginLeft="46dp"
            android:fontFamily="sans-serif-black" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        android:background="@color/purple_700">

        <ImageButton
            android:id="@+id/bot"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/bot"
            android:scaleType="centerCrop" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_chatbot"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="35dp"
            android:fontFamily="sans-serif-black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        android:background="@color/purple_700">

        <ImageButton
            android:id="@+id/recommendations"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/img"
            android:scaleType="centerCrop" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommendations"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-black" />
    </LinearLayout>

</RelativeLayout>